--- a/src/data/configDataInitial.json
+++ b/src/data/configDataInitial.json
@@ -25,6 +25,7 @@
     "background": "",
     "backgroundCongrats": "",
     "backgroundRewards": "",
+    "backgroundSpinner": "",
     "disable": "",
     "wrong": "",
     "correct": "",
