--- a/src/data/configDataInitial.json
+++ b/src/data/configDataInitial.json
@@ -25,7 +25,7 @@
     "background": "",
     "backgroundCongrats": "",
     "backgroundRewards": "",
-    "backgroundSpinner": "",
+    "backgroundCardQuestion": "",
     "disable": "",
     "wrong": "",
     "correct": "",
